<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
<name>tinycar_bringup</name>
  <version>0.0.0</version>
<description>The tinycar_bringup package</description>
  <maintainer email="todo@todo.com">author</maintainer>
  <license>TODO: License declaration</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Launch system -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros2_gz_sim</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>

    <!-- If you use ros_gz (Gazebo Harmonic/Ignition bridge) -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>